feat: [ITSADSSD-54515] Button style updates (#481)
* fix: update button to align with new styles and begin adjusting doco

* fix: update background color so buttons more flexible when using on dark backgrounds. update doco

* fix: update line height and padding rules from cx feedback

* fix: font-weight on hover. update transition rules to exclude font-weight change


---------

Co-authored-by: uqbcrunk <b.crunkhorn@uq.edu.au>

--- a/packages/storybook-html/component-template/component.mdx
+++ b/packages/storybook-html/component-template/component.mdx
@@ -3,19 +3,10 @@ import StatusBadge from "../../../.storybook/custom/components/StatusBadge";
 
 # Component name
 
-<StatusBadge.Development />
-<StatusBadge.Experiment />
-<StatusBadge.Stable />
-<StatusBadge.Review />
-<StatusBadge.Deprecated />
-
-<a
-  href="https://github.com/uq-its-ss/design-system/issues"
-  class="uq-button uq-button--text"
-  target="_blank"
->
-  Check for open issues
-</a>
+<StatusBadge.Development /> [Check for open
+issues](https://github.com/uq-its-ss/design-system/issues)
+<StatusBadge.Experiment /> <StatusBadge.Stable /> <StatusBadge.Review /> <StatusBadge.Deprecated /> [Check
+for open issues](https://github.com/uq-its-ss/design-system/issues)
 
 ## Overview
 
