--- a/packages/storybook-html/stories/components/loading-spinner/loading-spinner.mdx
+++ b/packages/storybook-html/stories/components/loading-spinner/loading-spinner.mdx
@@ -6,17 +6,8 @@ import * as LoadingSpinnerStories from "./loading-spinner.stories";
 
 # Loading spinner
 
-<StatusBadge.Stable />
-
-<StatusBadge.StableDoc />
-
-<a
-  href="https://github.com/uq-its-ss/design-system/issues"
-  class="uq-button uq-button--text"
-  target="_blank"
->
-  Check for open issues
-</a>
+<StatusBadge.Stable /> <StatusBadge.StableDoc /> [Check for open
+issues](https://github.com/uq-its-ss/design-system/issues)
 
 ## Overview
 
