--- a/packages/storybook-html/stories/components/accordion/accordion.mdx
+++ b/packages/storybook-html/stories/components/accordion/accordion.mdx
@@ -10,11 +10,7 @@ import * as AccordionStories from "./accordion.stories";
 
 <StatusBadge.StableDoc />
 
-<a
-  href="https://github.com/uq-its-ss/design-system/issues"
-  class="uq-button uq-button--text"
-  target="_blank"
->
+<a href="https://github.com/uq-its-ss/design-system/issues" target="_blank">
   Check for open issues
 </a>
 
