--- a/packages/storybook-html/stories/components/alert/alert.mdx
+++ b/packages/storybook-html/stories/components/alert/alert.mdx
@@ -6,17 +6,8 @@ import * as AlertStories from "./alert.stories";
 
 # Alert
 
-<StatusBadge.Review />
-
-<StatusBadge.ReviewDoc />
-
-<a
-  href="https://github.com/uq-its-ss/design-system/issues"
-  class="uq-button uq-button--text"
-  target="_blank"
->
-  Check for open issues
-</a>
+<StatusBadge.Review /> <StatusBadge.ReviewDoc /> [Check for open
+issues](https://github.com/uq-its-ss/design-system/issues)
 
 ## Overview
 
