fix: updated button story names

--- a/packages/storybook-html/stories/components/button/button.mdx
+++ b/packages/storybook-html/stories/components/button/button.mdx
@@ -23,17 +23,17 @@ The button component is used to make common actions more obvious and help users 
 The default button style used for the primary action on a page, eg. a submit button on a form. This should generally only be used once per view.
 
 <Canvas sourceState="hidden">
-  <Story of={ButtonStories.Primary} />
+  <Story of={ButtonStories.button} />
 </Canvas>
 
-<Controls of={ButtonStories.Primary} />
+<Controls of={ButtonStories.button} />
 
 ### Secondary
 
 A button style used alongside the default primary button to highlight an important action, eg. a save button on a form.
 
 <Canvas sourceState="hidden">
-  <Story of={ButtonStories.Secondary} />
+  <Story of={ButtonStories.buttonSecondary} />
 </Canvas>
 
 ### Tertiary
@@ -41,7 +41,7 @@ A button style used alongside the default primary button to highlight an importa
 A demphasied button style used for tertiary actions on a page, eg a Cancel button on a form.
 
 <Canvas sourceState="hidden">
-  <Story of={ButtonStories.Tertiary} />
+  <Story of={ButtonStories.buttonTertiary} />
 </Canvas>
 
 ### Size
@@ -49,7 +49,7 @@ A demphasied button style used for tertiary actions on a page, eg a Cancel butto
 The button sizes are normal, tiny `uq-button--tiny`, small `uq-button--small` and large `uq-button--large`
 
 <Canvas sourceState="hidden">
-  <Story of={ButtonStories.Size} />
+  <Story of={ButtonStories.buttonSize} />
 </Canvas>
 
 ```html
@@ -67,7 +67,7 @@ The button sizes are normal, tiny `uq-button--tiny`, small `uq-button--small` an
 Expand variant of the button `uq-button--expand` would extend the width of the button to full width of its parent container.
 
 <Canvas sourceState="hidden">
-  <Story of={ButtonStories.Expanded} />
+  <Story of={ButtonStories.buttonExpanded} />
 </Canvas>
 
 ```html
