--- a/packages/storybook-html/stories/components/accordion/accordion.mdx
+++ b/packages/storybook-html/stories/components/accordion/accordion.mdx
@@ -25,7 +25,7 @@ Accordions can be implemented using `<div>` or `<ul>` lists.
 Use divs if there is a significant amount of content to be displayed.
 
 <Canvas>
-  <Story of={AccordionStories.usingDivs} />
+  <Story of={AccordionStories.usingDivs} autoplay />
 </Canvas>
 
 ```html
@@ -62,7 +62,7 @@ Use divs if there is a significant amount of content to be displayed.
 Use lists if there is less content and when the semantics of a list serves better with assistive technologies like screen readers.
 
 <Canvas>
-  <Story of={AccordionStories.usingLists} />
+  <Story of={AccordionStories.usingLists} autoplay />
 </Canvas>
 
 ```html
@@ -111,7 +111,7 @@ new uq.accordion();
 The subtitle allows for a secondary context. Typically the primary title should provide enough information.
 
 <Canvas>
-  <Story of={AccordionStories.HasSubtitle} />
+  <Story of={AccordionStories.HasSubtitle} autoplay />
 </Canvas>
 
 ```html
@@ -155,7 +155,7 @@ The subtitle allows for a secondary context. Typically the primary title should 
 A smaller more compact version. Used as a support class for more complex interfaces mixing components. For general content use the standard size accordion.
 
 <Canvas>
-  <Story of={AccordionStories.IsCompact} />
+  <Story of={AccordionStories.IsCompact} autoplay />
 </Canvas>
 
 ```html
@@ -203,7 +203,7 @@ By default, users can expand and collapse one accordion at a time. When a user e
 Alternate behaviour is to allow users to expand and collapse any number of accordions at a time. When a user expands one accordion then clicks on another, the previously expanded accordion remains expanded and the user will need to manually collapse it. This is useful if users need to view the contents of multiple accordions at a time. To enable this behaviour, add the classname `uq-accordion--is-manual` to the `<div>` or `<ul>` as shown below.
 
 <Canvas>
-  <Story of={AccordionStories.isManual} />
+  <Story of={AccordionStories.isManual} autoplay />
 </Canvas>
 
 ```html
