--- a/packages/storybook-html/stories/components/tabs/tabs.mdx
+++ b/packages/storybook-html/stories/components/tabs/tabs.mdx
@@ -19,7 +19,7 @@ hierarchical level.
 ### Default / Outline
 
 <Canvas sourceState="hidden">
-  <Story of={TabsStories.tabsOutline} />
+  <Story of={TabsStories.tabsOutline} autoplay />
 </Canvas>
 
 ```html
@@ -95,7 +95,7 @@ hierarchical level.
 ### Minimal
 
 <Canvas sourceState="hidden">
-  <Story of={TabsStories.tabsMinimal} />
+  <Story of={TabsStories.tabsMinimal} autoplay />
 </Canvas>
 
 ```html
@@ -105,7 +105,7 @@ hierarchical level.
 ### Lined
 
 <Canvas sourceState="hidden">
-  <Story of={TabsStories.tabsLined} />
+  <Story of={TabsStories.tabsLined} autoplay />
 </Canvas>
 
 ```html
@@ -115,7 +115,7 @@ hierarchical level.
 ### With icon
 
 <Canvas sourceState="hidden">
-  <Story of={TabsStories.tabsWithIcon} />
+  <Story of={TabsStories.tabsWithIcon} autoplay />
 </Canvas>
 
 ```html
@@ -138,7 +138,7 @@ hierarchical level.
 ### Full width
 
 <Canvas sourceState="hidden">
-  <Story of={TabsStories.tabsFullWidth} />
+  <Story of={TabsStories.tabsFullWidth} autoplay />
 </Canvas>
 
 ```html
@@ -148,7 +148,7 @@ hierarchical level.
 ### Small
 
 <Canvas sourceState="hidden">
-  <Story of={TabsStories.tabsSmall} />
+  <Story of={TabsStories.tabsSmall} autoplay />
 </Canvas>
 
 ```html
@@ -158,7 +158,7 @@ hierarchical level.
 ### Reversed
 
 <Canvas sourceState="hidden">
-  <Story of={TabsStories.tabsReversed} />
+  <Story of={TabsStories.tabsReversed} autoplay />
 </Canvas>
 
 ```html
