fix: revamp colour docs

--- a/packages/storybook-html/stories/components/core/colour.mdx
+++ b/packages/storybook-html/stories/components/core/colour.mdx
@@ -5,10 +5,10 @@ import "./_colour.scss";
 
 # Colour
 
-## Applying colour
+Colour plays an key role in establishing a strong and consistent visual identity across UQ's digital presence.
 
-For consistency, we use the below defined colour palette throughout our interface. Keep in mind that green, red and yellow are only used in special cases like alerts and messaging.
 
+### Brand colours
 <table className="uqds-table uqds-table--card uqds-table--colour">
   <tbody className="uqds-table__body">
     <tr className="uqds-table__mobile-heading">
@@ -28,7 +28,7 @@ For consistency, we use the below defined colour palette throughout our interfac
         <code>#51247a</code>
       </td>
       <td className="uqds-table__item" data-title="Usage:">
-        Primary colour. Used for primary button and link text
+        Primary brand colour. Used for interactive elements like buttons and link text. 
       </td>
     </tr>
     <tr className="uqds-table__row">
@@ -42,21 +42,7 @@ For consistency, we use the below defined colour palette throughout our interfac
         <code>#4B2271</code>
       </td>
       <td className="uqds-table__item" data-title="Usage:">
-        Primary colour. Used for primary button and link text
-      </td>
-    </tr>
-    <tr className="uqds-table__row">
-      <td className="uqds-table__item">
-        <div className="uqds-colour__palette uqds-colour--purple-650"></div>
-      </td>
-      <td className="uqds-table__item" data-title="Variable:">
-        <code>$purple-650</code>
-      </td>
-      <td className="uqds-table__item" data-title="HEX:">
-        <code>#40205d</code>
-      </td>
-      <td className="uqds-table__item" data-title="Usage:">
-        Primary colour. Used for primary button and link text
+        Used as contrast colour for secondary navigation.
       </td>
     </tr>
     <tr className="uqds-table__row">
@@ -70,8 +56,20 @@ For consistency, we use the below defined colour palette throughout our interfac
         -
       </td>
       <td className="uqds-table__item" data-title="Usage:">
-        Primary colour. Used for primary button and link text
+        Used to apply UQ's purple gradient
       </td>
+    </tr>
+  </tbody>
+</table>
+<br />
+### Neutral colours
+<table className="uqds-table uqds-table--card uqds-table--colour">
+  <tbody className="uqds-table__body">
+    <tr className="uqds-table__mobile-heading">
+      <th className="uqds-table__heading">Example</th>
+      <th className="uqds-table__heading">Variable</th>
+      <th className="uqds-table__heading">HEX</th>
+      <th className="uqds-table__heading">Usage</th>
     </tr>
     <tr className="uqds-table__row">
       <td className="uqds-table__item">
@@ -84,7 +82,7 @@ For consistency, we use the below defined colour palette throughout our interfac
         <code>#19151c</code>
       </td>
       <td className="uqds-table__item" data-title="Usage:">
-        Primary colour. Used for primary button and link text
+        Used for all heading colours
       </td>
     </tr>
     <tr className="uqds-table__row">
@@ -98,7 +96,7 @@ For consistency, we use the below defined colour palette throughout our interfac
         <code>#3b383e</code>
       </td>
       <td className="uqds-table__item" data-title="Usage:">
-        Primary colour. Used for primary button and link text
+        Used for all body copy
       </td>
     </tr>
     <tr className="uqds-table__row">
@@ -112,7 +110,7 @@ For consistency, we use the below defined colour palette throughout our interfac
         <code>#757377</code>
       </td>
       <td className="uqds-table__item" data-title="Usage:">
-        Primary colour. Used for primary button and link text
+        Used for de-emphasised text eg. breadcrumbs, tags
       </td>
     </tr>
     <tr className="uqds-table__row">
@@ -126,7 +124,7 @@ For consistency, we use the below defined colour palette throughout our interfac
         <code>#d1d0d2</code>
       </td>
       <td className="uqds-table__item" data-title="Usage:">
-        Primary colour. Used for primary button and link text
+        Disabled form text
       </td>
     </tr>
     <tr className="uqds-table__row">
@@ -140,7 +138,7 @@ For consistency, we use the below defined colour palette throughout our interfac
         <code>#dcdcdd</code>
       </td>
       <td className="uqds-table__item" data-title="Usage:">
-        Primary colour. Used for primary button and link text
+        Border colour
       </td>
     </tr>
     <tr className="uqds-table__row">
@@ -154,7 +152,7 @@ For consistency, we use the below defined colour palette throughout our interfac
         <code>#f3f3f4</code>
       </td>
       <td className="uqds-table__item" data-title="Usage:">
-        Primary colour. Used for primary button and link text
+        Used as background colour to highlight sections, cards or panes
       </td>
     </tr>
     <tr className="uqds-table__row">
@@ -168,9 +166,23 @@ For consistency, we use the below defined colour palette throughout our interfac
         <code>#ffffff</code>
       </td>
       <td className="uqds-table__item" data-title="Usage:">
-        Primary colour. Used for primary button and link text
+        Standard white
       </td>
     </tr>
+  </tbody>
+</table>
+<br />
+
+### Status colours
+<table className="uqds-table uqds-table--card uqds-table--colour">
+  <tbody className="uqds-table__body">
+    <tr className="uqds-table__mobile-heading">
+      <th className="uqds-table__heading">Example</th>
+      <th className="uqds-table__heading">Variable</th>
+      <th className="uqds-table__heading">HEX</th>
+      <th className="uqds-table__heading">Usage</th>
+    </tr>
+    
     <tr className="uqds-table__row">
       <td className="uqds-table__item">
         <div className="uqds-colour__palette uqds-colour--utility-500"></div>
@@ -182,7 +194,7 @@ For consistency, we use the below defined colour palette throughout our interfac
         <code>#0d6dcd</code>
       </td>
       <td className="uqds-table__item" data-title="Usage:">
-        Primary colour. Used for primary button and link text
+        Focus state as well as background for global non-critical information alerts
       </td>
     </tr>
     <tr className="uqds-table__row">
@@ -196,7 +208,7 @@ For consistency, we use the below defined colour palette throughout our interfac
         <code>#e7f0fa</code>
       </td>
       <td className="uqds-table__item" data-title="Usage:">
-        Primary colour. Used for primary button and link text
+        Background colour for non-critical information alerts
       </td>
     </tr>
     <tr className="uqds-table__row">
@@ -210,7 +222,7 @@ For consistency, we use the below defined colour palette throughout our interfac
         <code>#d62929</code>
       </td>
       <td className="uqds-table__item" data-title="Usage:">
-        Primary colour. Used for primary button and link text
+        Background for global error alerts
       </td>
     </tr>
     <tr className="uqds-table__row">
@@ -224,7 +236,7 @@ For consistency, we use the below defined colour palette throughout our interfac
         <code>#fbeaea</code>
       </td>
       <td className="uqds-table__item" data-title="Usage:">
-        Primary colour. Used for primary button and link text
+        Background for error alerts
       </td>
     </tr>
     <tr className="uqds-table__row">
@@ -238,7 +250,7 @@ For consistency, we use the below defined colour palette throughout our interfac
         <code>#f7ba1e</code>
       </td>
       <td className="uqds-table__item" data-title="Usage:">
-        Primary colour. Used for primary button and link text
+        Background for global warning alerts
       </td>
     </tr>
     <tr className="uqds-table__row">
@@ -252,7 +264,7 @@ For consistency, we use the below defined colour palette throughout our interfac
         <code>#fef8e8</code>
       </td>
       <td className="uqds-table__item" data-title="Usage:">
-        Primary colour. Used for primary button and link text
+        Background for warning alerts
       </td>
     </tr>
     <tr className="uqds-table__row">
@@ -266,7 +278,7 @@ For consistency, we use the below defined colour palette throughout our interfac
         <code>#4aa74e</code>
       </td>
       <td className="uqds-table__item" data-title="Usage:">
-        Primary colour. Used for primary button and link text
+        Background for global success alerts
       </td>
     </tr>
     <tr className="uqds-table__row">
@@ -280,17 +292,16 @@ For consistency, we use the below defined colour palette throughout our interfac
         <code>#edf6ed</code>
       </td>
       <td className="uqds-table__item" data-title="Usage:">
-        Primary colour. Used for primary button and link text
+        Background for success alerts
       </td>
     </tr>
   </tbody>
 </table>
+<br />
 
-## Full spectrum of colours
+### Full spectrum of colours
 
 Our colours are created based off these scales below. If darker or lighter shaded are required they must be selected from this palette. Any introduction of colour outside those use cases above must be reviewed by the Design System team.
-
-### Brand
 
 #### Purple
 
@@ -331,39 +342,18 @@ Our colours are created based off these scales below. If darker or lighter shade
   <div className="uqds-colour__palette uqds-colour--white">white</div>
 </div>
 
-### System
-
 #### Utility
-
 <div class="uqds-colour__swatches">
   <div className="uqds-colour__palette uqds-colour--utility-50">utility-50</div>
-  <div className="uqds-colour__palette uqds-colour--utility-100">
-    utility-100
-  </div>
-  <div className="uqds-colour__palette uqds-colour--utility-200">
-    utility-200
-  </div>
-  <div className="uqds-colour__palette uqds-colour--utility-300">
-    utility-300
-  </div>
-  <div className="uqds-colour__palette uqds-colour--utility-400">
-    utility-400
-  </div>
-  <div className="uqds-colour__palette uqds-colour--utility-500">
-    utility-500
-  </div>
-  <div className="uqds-colour__palette uqds-colour--utility-600">
-    utility-600
-  </div>
-  <div className="uqds-colour__palette uqds-colour--utility-700">
-    utility-700
-  </div>
-  <div className="uqds-colour__palette uqds-colour--utility-800">
-    utility-800
-  </div>
-  <div className="uqds-colour__palette uqds-colour--utility-900">
-    utility-900
-  </div>
+  <div className="uqds-colour__palette uqds-colour--utility-100">utility-100</div>
+  <div className="uqds-colour__palette uqds-colour--utility-200">utility-200</div>
+  <div className="uqds-colour__palette uqds-colour--utility-300">utility-300</div>
+  <div className="uqds-colour__palette uqds-colour--utility-400">utility-400</div>
+  <div className="uqds-colour__palette uqds-colour--utility-500">utility-500</div>
+  <div className="uqds-colour__palette uqds-colour--utility-600">utility-600</div>
+  <div className="uqds-colour__palette uqds-colour--utility-700">utility-700</div>
+  <div className="uqds-colour__palette uqds-colour--utility-800">utility-800</div>
+  <div className="uqds-colour__palette uqds-colour--utility-900">utility-900</div>
 </div>
 
 #### Error
@@ -385,64 +375,28 @@ Our colours are created based off these scales below. If darker or lighter shade
 
 <div class="uqds-colour__swatches">
   <div className="uqds-colour__palette uqds-colour--warning-50">warning-50</div>
-  <div className="uqds-colour__palette uqds-colour--warning-100">
-    warning-100
-  </div>
-  <div className="uqds-colour__palette uqds-colour--warning-200">
-    warning-200
-  </div>
-  <div className="uqds-colour__palette uqds-colour--warning-300">
-    warning-300
-  </div>
-  <div className="uqds-colour__palette uqds-colour--warning-400">
-    warning-400
-  </div>
-  <div className="uqds-colour__palette uqds-colour--warning-500">
-    warning-500
-  </div>
-  <div className="uqds-colour__palette uqds-colour--warning-600">
-    warning-600
-  </div>
-  <div className="uqds-colour__palette uqds-colour--warning-700">
-    warning-700
-  </div>
-  <div className="uqds-colour__palette uqds-colour--warning-800">
-    warning-800
-  </div>
-  <div className="uqds-colour__palette uqds-colour--warning-900">
-    warning-900
-  </div>
+  <div className="uqds-colour__palette uqds-colour--warning-100">warning-100</div>
+  <div className="uqds-colour__palette uqds-colour--warning-200">warning-200</div>
+  <div className="uqds-colour__palette uqds-colour--warning-300">warning-300</div>
+  <div className="uqds-colour__palette uqds-colour--warning-400">warning-400</div>
+  <div className="uqds-colour__palette uqds-colour--warning-500">warning-500</div>
+  <div className="uqds-colour__palette uqds-colour--warning-600">warning-600</div>
+  <div className="uqds-colour__palette uqds-colour--warning-700">warning-700</div>
+  <div className="uqds-colour__palette uqds-colour--warning-800">warning-800</div>
+  <div className="uqds-colour__palette uqds-colour--warning-900">warning-900</div>
 </div>
 
 #### Success
 
 <div class="uqds-colour__swatches">
   <div className="uqds-colour__palette uqds-colour--success-50">success-50</div>
-  <div className="uqds-colour__palette uqds-colour--success-100">
-    success-100
-  </div>
-  <div className="uqds-colour__palette uqds-colour--success-200">
-    success-200
-  </div>
-  <div className="uqds-colour__palette uqds-colour--success-300">
-    success-300
-  </div>
-  <div className="uqds-colour__palette uqds-colour--success-400">
-    success-400
-  </div>
-  <div className="uqds-colour__palette uqds-colour--success-500">
-    success-500
-  </div>
-  <div className="uqds-colour__palette uqds-colour--success-600">
-    success-600
-  </div>
-  <div className="uqds-colour__palette uqds-colour--success-700">
-    success-700
-  </div>
-  <div className="uqds-colour__palette uqds-colour--success-800">
-    success-800
-  </div>
-  <div className="uqds-colour__palette uqds-colour--success-900">
-    success-900
-  </div>
+  <div className="uqds-colour__palette uqds-colour--success-100">success-100</div>
+  <div className="uqds-colour__palette uqds-colour--success-200">success-200</div>
+  <div className="uqds-colour__palette uqds-colour--success-300">success-300</div>
+  <div className="uqds-colour__palette uqds-colour--success-400">success-400</div>
+  <div className="uqds-colour__palette uqds-colour--success-500">success-500</div>
+  <div className="uqds-colour__palette uqds-colour--success-600">success-600</div>
+  <div className="uqds-colour__palette uqds-colour--success-700">success-700</div>
+  <div className="uqds-colour__palette uqds-colour--success-800">success-800</div>
+  <div className="uqds-colour__palette uqds-colour--success-900">success-900</div>
 </div>
