--- a/packages/storybook-html/stories/components/core/colour.mdx
+++ b/packages/storybook-html/stories/components/core/colour.mdx
@@ -7,8 +7,8 @@ import "./_colour.scss";
 
 Colour plays an key role in establishing a strong and consistent visual identity across UQ's digital presence.
 
-
 ### Brand colours
+
 <table className="uqds-table uqds-table--card uqds-table--colour">
   <tbody className="uqds-table__body">
     <tr className="uqds-table__mobile-heading">
@@ -28,7 +28,8 @@ Colour plays an key role in establishing a strong and consistent visual identity
         <code>#51247a</code>
       </td>
       <td className="uqds-table__item" data-title="Usage:">
-        Primary brand colour. Used for interactive elements like buttons and link text. 
+        Primary brand colour. Used for interactive elements like buttons and
+        link text.
       </td>
     </tr>
     <tr className="uqds-table__row">
@@ -174,6 +175,7 @@ Colour plays an key role in establishing a strong and consistent visual identity
 <br />
 
 ### Status colours
+
 <table className="uqds-table uqds-table--card uqds-table--colour">
   <tbody className="uqds-table__body">
     <tr className="uqds-table__mobile-heading">
@@ -182,7 +184,7 @@ Colour plays an key role in establishing a strong and consistent visual identity
       <th className="uqds-table__heading">HEX</th>
       <th className="uqds-table__heading">Usage</th>
     </tr>
-    
+
     <tr className="uqds-table__row">
       <td className="uqds-table__item">
         <div className="uqds-colour__palette uqds-colour--utility-500"></div>
@@ -194,7 +196,8 @@ Colour plays an key role in establishing a strong and consistent visual identity
         <code>#0d6dcd</code>
       </td>
       <td className="uqds-table__item" data-title="Usage:">
-        Focus state as well as background for global non-critical information alerts
+        Focus state as well as background for global non-critical information
+        alerts
       </td>
     </tr>
     <tr className="uqds-table__row">
@@ -343,17 +346,36 @@ Our colours are created based off these scales below. If darker or lighter shade
 </div>
 
 #### Utility
+
 <div class="uqds-colour__swatches">
   <div className="uqds-colour__palette uqds-colour--utility-50">utility-50</div>
-  <div className="uqds-colour__palette uqds-colour--utility-100">utility-100</div>
-  <div className="uqds-colour__palette uqds-colour--utility-200">utility-200</div>
-  <div className="uqds-colour__palette uqds-colour--utility-300">utility-300</div>
-  <div className="uqds-colour__palette uqds-colour--utility-400">utility-400</div>
-  <div className="uqds-colour__palette uqds-colour--utility-500">utility-500</div>
-  <div className="uqds-colour__palette uqds-colour--utility-600">utility-600</div>
-  <div className="uqds-colour__palette uqds-colour--utility-700">utility-700</div>
-  <div className="uqds-colour__palette uqds-colour--utility-800">utility-800</div>
-  <div className="uqds-colour__palette uqds-colour--utility-900">utility-900</div>
+  <div className="uqds-colour__palette uqds-colour--utility-100">
+    utility-100
+  </div>
+  <div className="uqds-colour__palette uqds-colour--utility-200">
+    utility-200
+  </div>
+  <div className="uqds-colour__palette uqds-colour--utility-300">
+    utility-300
+  </div>
+  <div className="uqds-colour__palette uqds-colour--utility-400">
+    utility-400
+  </div>
+  <div className="uqds-colour__palette uqds-colour--utility-500">
+    utility-500
+  </div>
+  <div className="uqds-colour__palette uqds-colour--utility-600">
+    utility-600
+  </div>
+  <div className="uqds-colour__palette uqds-colour--utility-700">
+    utility-700
+  </div>
+  <div className="uqds-colour__palette uqds-colour--utility-800">
+    utility-800
+  </div>
+  <div className="uqds-colour__palette uqds-colour--utility-900">
+    utility-900
+  </div>
 </div>
 
 #### Error
@@ -375,28 +397,64 @@ Our colours are created based off these scales below. If darker or lighter shade
 
 <div class="uqds-colour__swatches">
   <div className="uqds-colour__palette uqds-colour--warning-50">warning-50</div>
-  <div className="uqds-colour__palette uqds-colour--warning-100">warning-100</div>
-  <div className="uqds-colour__palette uqds-colour--warning-200">warning-200</div>
-  <div className="uqds-colour__palette uqds-colour--warning-300">warning-300</div>
-  <div className="uqds-colour__palette uqds-colour--warning-400">warning-400</div>
-  <div className="uqds-colour__palette uqds-colour--warning-500">warning-500</div>
-  <div className="uqds-colour__palette uqds-colour--warning-600">warning-600</div>
-  <div className="uqds-colour__palette uqds-colour--warning-700">warning-700</div>
-  <div className="uqds-colour__palette uqds-colour--warning-800">warning-800</div>
-  <div className="uqds-colour__palette uqds-colour--warning-900">warning-900</div>
+  <div className="uqds-colour__palette uqds-colour--warning-100">
+    warning-100
+  </div>
+  <div className="uqds-colour__palette uqds-colour--warning-200">
+    warning-200
+  </div>
+  <div className="uqds-colour__palette uqds-colour--warning-300">
+    warning-300
+  </div>
+  <div className="uqds-colour__palette uqds-colour--warning-400">
+    warning-400
+  </div>
+  <div className="uqds-colour__palette uqds-colour--warning-500">
+    warning-500
+  </div>
+  <div className="uqds-colour__palette uqds-colour--warning-600">
+    warning-600
+  </div>
+  <div className="uqds-colour__palette uqds-colour--warning-700">
+    warning-700
+  </div>
+  <div className="uqds-colour__palette uqds-colour--warning-800">
+    warning-800
+  </div>
+  <div className="uqds-colour__palette uqds-colour--warning-900">
+    warning-900
+  </div>
 </div>
 
 #### Success
 
 <div class="uqds-colour__swatches">
   <div className="uqds-colour__palette uqds-colour--success-50">success-50</div>
-  <div className="uqds-colour__palette uqds-colour--success-100">success-100</div>
-  <div className="uqds-colour__palette uqds-colour--success-200">success-200</div>
-  <div className="uqds-colour__palette uqds-colour--success-300">success-300</div>
-  <div className="uqds-colour__palette uqds-colour--success-400">success-400</div>
-  <div className="uqds-colour__palette uqds-colour--success-500">success-500</div>
-  <div className="uqds-colour__palette uqds-colour--success-600">success-600</div>
-  <div className="uqds-colour__palette uqds-colour--success-700">success-700</div>
-  <div className="uqds-colour__palette uqds-colour--success-800">success-800</div>
-  <div className="uqds-colour__palette uqds-colour--success-900">success-900</div>
+  <div className="uqds-colour__palette uqds-colour--success-100">
+    success-100
+  </div>
+  <div className="uqds-colour__palette uqds-colour--success-200">
+    success-200
+  </div>
+  <div className="uqds-colour__palette uqds-colour--success-300">
+    success-300
+  </div>
+  <div className="uqds-colour__palette uqds-colour--success-400">
+    success-400
+  </div>
+  <div className="uqds-colour__palette uqds-colour--success-500">
+    success-500
+  </div>
+  <div className="uqds-colour__palette uqds-colour--success-600">
+    success-600
+  </div>
+  <div className="uqds-colour__palette uqds-colour--success-700">
+    success-700
+  </div>
+  <div className="uqds-colour__palette uqds-colour--success-800">
+    success-800
+  </div>
+  <div className="uqds-colour__palette uqds-colour--success-900">
+    success-900
+  </div>
 </div>
