--- a/packages/storybook-html/stories/layout/page-layouts/sidebar/sidebar.mdx
+++ b/packages/storybook-html/stories/layout/page-layouts/sidebar/sidebar.mdx
@@ -21,7 +21,7 @@ The element must first be wrapped in a `.uq-container` element to provide the
 
 Then implement the component as per the HTML example below.
 
-the `.uq-sections` element should be used within `.uq-sidebar-layout__main` to
+`.uq-section` elements are then used within `.uq-sidebar-layout__main` to
 provide correct **section spacing**.
 
 <Canvas>
@@ -33,7 +33,7 @@ provide correct **section spacing**.
   <div class="uq-sidebar-layout">
     <div class="uq-sidebar-layout__sidebar"></div>
     <div class="uq-sidebar-layout__main">
-      <div class="uq-sections"></div>
+      <div class="uq-section"></div>
     </div>
   </div>
 </div>
